TS-1632  RecDecrRawStat does not seem to work as intended

Note that part of this was committed in TS-1674. But I think
the additional "safety" checks from the v2 patch makes sense.